fix of gap between image and header in the main page

--- a/shared.css
+++ b/shared.css
@@ -55,10 +55,13 @@ main {
     color: rgb(2, 59, 2);
     text-decoration: none;
     font-weight: bold;
+    height: 2.5rem;
+    display: inline-block;
+    vertical-align: middle;
 }
 
 .main-header__brand img {
-    height: 1.5rem;
+    height: 100%;
     vertical-align: middle;
     /* width: 100%; */
 }
